load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errbatch.go",
    ],
    importpath = "github.com/fishy/fsdb/errbatch",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "doc_test.go",
        "errbatch_test.go",
    ],
    importpath = "github.com/fishy/fsdb/errbatch_test",
    deps = [":go_default_library"],
)
