load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "pool.go",
    ],
    importpath = "github.com/fishy/fsdb/pool",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = [
        "doc_test.go",
        "pool_test.go",
    ],
    importpath = "github.com/fishy/fsdb/pool_test",
    deps = [":go_default_library"],
)
