load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "options.go",
        "remote.go",
    ],
    importpath = "github.com/fishy/fsdb/remote",
    visibility = ["//visibility:public"],
    deps = [
        "//bucket:go_default_library",
        "//errbatch:go_default_library",
        "//interface:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["remote_test.go"],
    importpath = "github.com/fishy/fsdb/remote_test",
    size = "small",
    deps = [
        ":go_default_library",
        "//bucket:go_default_library",
        "//interface:go_default_library",
        "//local:go_default_library",
    ],
)
