load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "wrapreader.go",
    ],
    importpath = "github.com/fishy/fsdb/wrapreader",
    visibility = ["//visibility:public"],
    deps = ["//errbatch:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["wrapreader_test.go"],
    importpath = "github.com/fishy/fsdb/wrapreader_test",
    size = "small",
    deps = [":go_default_library"],
)
