load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "local.go",
        "options.go",
    ],
    importpath = "github.com/fishy/fsdb/fsdb/local",
    visibility = ["//visibility:public"],
    deps = [
        "//fsdb:go_default_library",
        "//libs/wrapreader:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = [
        "doc_test.go",
        "local_test.go",
        "options_test.go",
    ],
    importpath = "github.com/fishy/fsdb/fsdb/local_test",
    deps = [
        ":go_default_library",
        "//fsdb:go_default_library",
    ],
)
