load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errbatch.go",
    ],
    importpath = "github.com/fishy/fsdb/libs/errbatch",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = [
        "doc_test.go",
        "errbatch_test.go",
    ],
    deps = [":go_default_library"],
)
