load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "wrapreader.go",
    ],
    importpath = "github.com/fishy/fsdb/libs/wrapreader",
    visibility = ["//visibility:public"],
    deps = ["//libs/errbatch:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = ["wrapreader_test.go"],
    deps = [":go_default_library"],
)
